<resources>
    <string name="app_name">Native</string>
    <string name="search">Search</string>
    <string name="greate_kids">GreatKids!</string>
    <string name="nearby">Nearby</string>
    <string name="my_school">My Schools</string>
    <string name="explore">Let\'s explore</string>
    <string name="distance">DISTANCE</string>
    <string name="az">A-Z</string>
    <string name="ratings">RATINGS</string>
    <string name="school_des"><![CDATA[<font color="#FFFFFF">SCHOOLS IN THIS</font> <font color="#B8E986">NEIGHBORHOOD</font>]]></string>
    <string name="pick_school">Pick a School</string>
    <string name="assigned_schools">ASSIGNED SCHOOLS</string>
    <string name="elementary_school">ELEMENTARY SCHOOLS</string>
    <string name="middle_school">MIDDLE SCHOOLS</string>
    <string name="high_school">HIGH SCHOOLS</string>
    <string name="recommended_content">RECOMMENDED CONTENT</string>
    <string name="milestone">MILESTONE</string>
    <string name="recommended_content_info">Free online collection of videos aimed at helping you understand your kid\'s grade-level expectations</string>
    <string name="reviews">%d reviews</string>
    <string name="article">ARTICLE</string>
    <string name="article_desc">Are our screen-addicted kids frying their brains?</string>
    <string name="content_by">Content by: GreatKids</string>
    <string name="school_distance">%s Miles</string>
    <string name="more">7 More Schools</string>
    <string name="world_game">Feeling Word Game</string>
    <string name="eye_video">Through a child’s eyes videos</string>
    <string name="toolbox">Emotional Toolbox</string>
    <string name="easy_learning">EASY LEARNING</string>
    <string name="easy_learning_info">A tasty way to teach your little ones how to wait</string>
    <string name="overview">OVERVIEW</string>
    <string name="review">REVIEW</string>
    <string name="stats">STATS</string>
    <string name="school_rating">GreatSchools Rating</string>
    <string name="out_of_count">Out of 10</string>
    <string name="user_review">User Review</string>
    <string name="user_review_count">%d Reviews</string>
    <string name="student_enrolled">Student Enrolled</string>
    <string name="school_location">Location</string>
    <string name="before_care">Before Care</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="after_care">After Care</string>
    <string name="overview_lowercase">Overview</string>
    <string name="setting">Setting</string>
    <string name="call">Call</string>
    <string name="favorite">Favorite</string>
    <string name="detail_header_title">College Park High School</string>
    <string name="detail_overview">DETAILS OVERVIEW</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="art"><![CDATA[Art & Music]]></string>
    <string name="chess">Chess</string>
    <string name="sports">Sports</string>
    <string name="world_language">World Languages</string>
    <string name="test_scores">TEST SCORES</string>
    <string name="total_review">TOTAL REVIEW</string>
    <string name="write_review">write a review</string>
    <string name="review_info1">The administration at this school is an embarrassment. The level of incompetency is monumental. The fact that the students succeed at all is due entirely to the many excellent teachers and parental involvement.</string>
    <string name="review_info2">The administration at this school is an embarrassment. The level of incompetency is monumental. The fact that the students succeed at all is due entirely to the many excellent teachers and parental involvement.</string>
    <string name="review_info3">I\'ve only been going to College Park for a week now and I already love the school! Not only do the teachers care, but the electives they offer are more than I\'ve ever seen!</string>
    <string name="description">In 2014-2015 California used the California Standard Tests (CSTs) to test students in science in grades 5,8 and 10,. The CSTs are standards-based tests, which means they measure how well students are mastering specific skills defined for each grade...More</string>
    <string name="greate_kid">GreatKids</string>
</resources>
