<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:font="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@mipmap/recommended_content_bg"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/milestone"
        android:textColor="#F15D22"
        android:textSize="30sp"/>

    <com.greatschool.android.ui.common.font.TypefacedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:text="@string/recommended_content_info"
        android:textColor="#101112"
        font:typeface="proxima_nova_regular"/>

    <Button
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/recommented_explore_selector"
        android:text="@string/explore"
        android:textColor="@android:color/white"/>

</LinearLayout>