<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F5F6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/school_item"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <com.greatschool.android.ui.common.font.TypefacedTextView
                android:id="@+id/school_rating_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/school_rating"
                android:textColor="#1C252E"
                android:textSize="14sp"
                font:typeface="proxima_nova_semibold"/>

            <com.greatschool.android.ui.common.font.TypefacedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/school_rating_title"
                android:layout_marginTop="10dp"
                android:text="@string/out_of_count"
                android:textSize="14sp"
                font:typeface="proxima_nova_regular"/>


            <ImageView
                android:id="@+id/right_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/right_arrow"/>

            <com.greatschool.android.ui.common.font.TypefacedTextView
                android:id="@+id/school_score"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@id/right_arrow"
                android:background="@mipmap/school_score_green"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                font:typeface="proxima_nova_regular"/>

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCD1DFE5"></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <com.greatschool.android.ui.common.font.TypefacedTextView
                android:id="@+id/user_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_review"
                android:textColor="#1C252E"
                android:textSize="14sp"
                font:typeface="proxima_nova_semibold"/>

            <com.greatschool.android.ui.common.font.TypefacedTextView
                android:id="@+id/user_review_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_review"
                android:layout_marginTop="10dp"
                android:text="@string/user_review_count"
                android:textSize="14sp"
                font:typeface="proxima_nova_regular"/>


            <ImageView
                android:id="@+id/review_right_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/right_arrow"/>

            <com.greatschool.android.ui.common.font.TypefacedTextView
                android:id="@+id/school_review"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@id/review_right_arrow"
                android:background="@mipmap/school_score_green"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                font:typeface="proxima_nova_regular"/>

            <RatingBar
                android:id="@+id/school_rating"
                style="@style/CustomRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@id/school_review"
                android:isIndicator="true"
                android:numStars="5"/>

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCD1DFE5"></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <com.greatschool.android.ui.common.font.TypefacedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/student_enrolled"
                android:textColor="#1C252E"
                android:textSize="14sp"
                font:typeface="proxima_nova_regular"/>

            <com.greatschool.android.ui.common.font.TypefacedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:text="1950"
                android:textColor="#1C252E"
                android:textSize="14sp"
                font:typeface="proxima_nova_semibold"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCD1DFE5"></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <com.greatschool.android.ui.common.font.TypefacedTextView
                android:id="@+id/school_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/school_location"
                android:textColor="#1C252E"
                android:textSize="14sp"
                font:typeface="proxima_nova_regular"/>


            <ImageView
                android:id="@+id/location_right_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/right_arrow"/>

            <com.greatschool.android.ui.common.font.TypefacedTextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@id/location_right_arrow"
                android:gravity="center"
                android:textColor="#1C252E"
                android:textSize="16sp"
                font:typeface="proxima_nova_regular"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCD1DFE5"></View>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <com.greatschool.android.ui.common.font.TypefacedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/before_care"
                android:textColor="#1C252E"
                android:textSize="14sp"
                font:typeface="proxima_nova_regular"/>

            <com.greatschool.android.ui.common.font.TypefacedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:text="@string/no"
                android:textColor="#F48200"
                android:textSize="14sp"
                font:typeface="proxima_nova_semibold"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCD1DFE5"></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <com.greatschool.android.ui.common.font.TypefacedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/after_care"
                android:textColor="#1C252E"
                android:textSize="14sp"
                font:typeface="proxima_nova_regular"/>

            <com.greatschool.android.ui.common.font.TypefacedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:text="@string/yes"
                android:textColor="#65A500"
                android:textSize="14sp"
                font:typeface="proxima_nova_semibold"/>

        </RelativeLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>